CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

FILE(GLOB luasrc src/*.lua)

ADD_TORCH_PACKAGE(gradolabar "" "${luasrc}")

# INSTALL(DIRECTORY "src/model" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/gradolabar")
# INSTALL(DIRECTORY "src/loss" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/gradolabar")
# INSTALL(DIRECTORY "src/auto" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/gradolabar")
# INSTALL(DIRECTORY "src/optim" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/gradolabar")
# INSTALL(DIRECTORY "src/runtime" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/gradolabar")